objects/SMAX_PS_Complaint_Rules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Complaint Rules, per &quot;Super Business Unit&quot; (DAS, DX)</description>
    <label>SMAX Complaint Rules</label>
    <fields>
        <fullName>SMAX_PS_Condition_HSI_Yes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Condition indicates that an answer of Yes to any HSI Question will enable the Complaint Validations.</description>
        <inlineHelpText>This Condition indicates that an answer of Yes to any HSI Question will enable the Complaint Validations.</inlineHelpText>
        <label>Condition: HSI Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Validation_HSI_Answered__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that the HSI Answers must be either a Yes or No.
Enforced during WO Complete, only if one or more of the conditions was met.</description>
        <inlineHelpText>Indicates that the HSI Answers must be either a Yes or No.
Enforced during WO Complete, only if one or more of the conditions was met.</inlineHelpText>
        <label>Validation: HSI Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Condition_Medical_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Condition indicates that the Installed Product &quot;Is Medical Device&quot; will enable the Complaint Validations.</description>
        <inlineHelpText>This Condition indicates that the Installed Product &quot;Is Medical Device&quot; will enable the Complaint Validations.</inlineHelpText>
        <label>Condition: Medical Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Condition_Manual_Complaint__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Condition indicates that a Manual Complaint (Priority=Complaint) will enable the Complaint Validations.</description>
        <inlineHelpText>This Condition indicates that a Manual Complaint (Priority=Complaint) will enable the Complaint Validations.</inlineHelpText>
        <label>Condition: Manual Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Condition_Restrict_PC_Group__c</fullName>
        <description>The Problem Group that must be selected to validate the Problem Code.</description>
        <inlineHelpText>The Problem Group that must be selected to validate the Problem Code.</inlineHelpText>
        <label>Condition: Restrict PC Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Condition_Fault_Code_Com_Reqd__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Condition indicates that any of the non Problem Code Fault Codes (Action, Completion, Installation) are selected which have &quot;Complaint Required&quot; checked will enable the Complaint Validations.</description>
        <inlineHelpText>This Condition indicates that any of the non Problem Code Fault Codes (Action, Completion, Installation) are selected which have &quot;Complaint Required&quot; checked will enable the Complaint Validations.</inlineHelpText>
        <label>Condition: Fault Code Complaint Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Validation_Guidance_Not_Blank__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that the Guidance Answers must not be blank.
Enforced during WO Complete, only if one or more of the conditions was met.</description>
        <inlineHelpText>Indicates that the Guidance Answers must not be blank.
Enforced during WO Complete, only if one or more of the conditions was met.</inlineHelpText>
        <label>Validation: Guidance Not Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Condition_Restrict_PC_Com_Reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Condition, when NOT checked, indicates that if the selected Problem Code &quot;Is Complaint Required&quot; will enable the Complaint Validations. When it IS checked, the other &quot;Restrict PC&quot; fields are required, and the selected Problem Code is only validated when the Group and Indicators match the WO.</description>
        <inlineHelpText>This Condition, when NOT checked, indicates that if the selected Problem Code &quot;Is Complaint Required&quot; will enable the Complaint Validations. When it IS checked, the other &quot;Restrict PC&quot; fields are required, and the selected Problem Code is only validated w</inlineHelpText>
        <label>Condition: Restrict PC Complaint Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Validation_Regulatory_Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Regulatory Answers must be either a Yes or No, regardless of HSI.
Enforced during WO Complete, only if one or more of the conditions was met.</description>
        <inlineHelpText>Indicates that the Regulatory Answers must be either a Yes or No, regardless of HSI.
Enforced during WO Complete, only if one or more of the conditions was met.</inlineHelpText>
        <label>Validation: Regulatory Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Validation_Regulatory_When_HSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Regulatory Answers must be either a Yes or No, only when one of the HSI Answers was Yes.
Enforced during WO Complete, only if one or more of the conditions was met.</description>
        <inlineHelpText>Indicates that the Regulatory Answers must be either a Yes or No, only when one of the HSI Answers was Yes.
Enforced during WO Complete, only if one or more of the conditions was met.</inlineHelpText>
        <label>Validation: Regulatory When HSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Condition_Restrict_PC_Indicators__c</fullName>
        <description>The Work Order Indicator Field API Name(s) that must evaluate to TRUE to validate the Problem Code.</description>
        <inlineHelpText>The Work Order Indicator Field API Name(s) that must evaluate to TRUE to validate the Problem Code.</inlineHelpText>
        <label>Condition: Restrict PC Indicators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>